--- a/samples/bin/image_sample.config
+++ b/samples/bin/image_sample.config
@@ -3,7 +3,7 @@
 	[
 		{
 			sName: MainRenderer
-			sScene: image_sample.scene
+			aPasses: [1]
 		}
 	]
 	aViewport:
@@ -14,6 +14,7 @@
 			iHeight: 600
 			sCamera: MainCamera
 			sRenderer: MainRenderer
+			sScene: image_sample.scene
 		}
 	]
 }
