--- a/visual/vs2012/seed/seed.vcxproj
+++ b/visual/vs2012/seed/seed.vcxproj
@@ -19,6 +19,7 @@
     <ClCompile Include="..\..\..\source\api\oal\vorbis_util.cpp" />
     <ClCompile Include="..\..\..\source\api\ogl\oglES1RendererDevice.cpp" />
     <ClCompile Include="..\..\..\source\api\rocket\RocketInterface.cpp" />
+    <ClCompile Include="..\..\..\source\api\soil\soilTexture.cpp" />
     <ClCompile Include="..\..\..\source\api\yajl\JsonReader.cpp" />
     <ClCompile Include="..\..\..\source\api\yajl\JsonWriter.cpp" />
     <ClCompile Include="..\..\..\source\Camera.cpp" />
@@ -126,6 +127,10 @@
     <ClCompile Include="..\..\..\source\platform\qt\qtSystem.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="..\..\..\source\platform\sdl2\sdl2Input.cpp" />
+    <ClCompile Include="..\..\..\source\platform\sdl2\sdl2Screen.cpp" />
+    <ClCompile Include="..\..\..\source\platform\sdl2\sdl2System.cpp" />
+    <ClCompile Include="..\..\..\source\platform\sdl2\sdl2Texture.cpp" />
     <ClCompile Include="..\..\..\source\platform\sdl\sdlInput.cpp" />
     <ClCompile Include="..\..\..\source\platform\sdl\sdlScreen.cpp" />
     <ClCompile Include="..\..\..\source\platform\sdl\sdlSystem.cpp" />
@@ -161,6 +166,7 @@
     <ClInclude Include="..\..\..\include\api\oal\oalSoundSource.h" />
     <ClInclude Include="..\..\..\include\api\oal\oalSoundSystem.h" />
     <ClInclude Include="..\..\..\include\api\oal\vorbis_util.h" />
+    <ClInclude Include="..\..\..\include\api\soil\soilTexture.h" />
     <ClInclude Include="..\..\..\include\Camera.h" />
     <ClInclude Include="..\..\..\include\Cartridge.h" />
     <ClInclude Include="..\..\..\include\Checksum.h" />
@@ -311,6 +317,11 @@
     <ClInclude Include="..\..\..\include\platform\qt\qtSystem.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\platform\sdl2\sdl2Defines.h" />
+    <ClInclude Include="..\..\..\include\platform\sdl2\sdl2Input.h" />
+    <ClInclude Include="..\..\..\include\platform\sdl2\sdl2Screen.h" />
+    <ClInclude Include="..\..\..\include\platform\sdl2\sdl2System.h" />
+    <ClInclude Include="..\..\..\include\platform\sdl2\sdl2Texture.h" />
     <ClInclude Include="..\..\..\include\platform\sdl\sdlDefines.h" />
     <ClInclude Include="..\..\..\include\platform\sdl\sdlInput.h" />
     <ClInclude Include="..\..\..\include\platform\sdl\sdlScreen.h" />
@@ -405,9 +416,10 @@
       </PrecompiledHeader>
       <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;BUILD_SDL;DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_LIB;BUILD_SDL2;DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <DisableSpecificWarnings>4521;4275</DisableSpecificWarnings>
+      <ExceptionHandling>false</ExceptionHandling>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
