Project visual studio using SDL2. Remove some warnings. Compile and run, but crashes inside alloca (physfs), I'm not sure what happens, but maybe something with 64bits or some bizarre visual studio (mis)configuration.

--- a/visual/vs2012/Sample_02_image/Sample_02_image.vcxproj
+++ b/visual/vs2012/Sample_02_image/Sample_02_image.vcxproj
@@ -57,7 +57,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;BUILD_SDL2;DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <DisableSpecificWarnings>
       </DisableSpecificWarnings>
-      <ExceptionHandling>false</ExceptionHandling>
+      <ExceptionHandling>Sync</ExceptionHandling>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
